--- a/style/style.css
+++ b/style/style.css
@@ -87,3 +87,37 @@
     color:#FFFF; 
 }
 
+.bar{
+     display: none; 
+}
+
+/*for nav media quary */
+
+@media screen and (max-width:576px) {
+    *{
+        margin: 0px;
+        padding: 0px;
+    } 
+    .nav1 p, .nav2{
+        display: none;
+    }
+     .btn-1{
+        display: none;
+    }
+    .bar{
+        display: block;
+    }
+
+    .nav1 img{
+        width: 90%;
+        margin-bottom: 10px;
+    }
+    .nav{
+       
+        padding-left:16px;
+        padding-right:16px;
+        justify-content: space-between;
+        border:1px solid rgba(254, 163, 1, 1);
+    }
+}
+
