--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,68 @@
      display: none; 
 }
 
+
+/****************************************************************************/
+/*container section */
+
+.container{
+    display: flex;
+    width: 1159px;
+    height: 575px;
+    margin-top:37px;
+    margin-right:142px;
+    margin-left:40px;
+    
+} 
+.introduction{
+    width: 640px;
+    height: 331px;
+    margin-top:122px;
+    margin-right:50px;
+    margin-left: 0px;
+    margin-bottom:122px;
+}
+.introduction1{
+    font-size:3.5rem;
+    font-weight: bold;
+    margin-bottom: 24px;
+}
+
+.span1{
+    color:rgba(254, 163, 1, 1);
+}
+.span2{
+    color:rgba(1, 172, 253, 1);
+}
+.introduction2{
+    font-size:1.25rem;
+    font-weight:400;
+    margin-bottom: 24px;
+}
+.btn-2{
+    width: 197px;
+    height: 50px;
+    border-radius: 12px;
+    border: none;
+    color: white;
+    background-color: black;
+    font-size:1.25rem;
+    font-weight:bold;
+}
+
+/* For kid image */
+.kids_image{
+    width:470px;
+    height: 575px;
+
+}
+
+
+
+
+
+
+
 /*for nav media quary */
 
 @media screen and (max-width:576px) {
