--- a/style/style.css
+++ b/style/style.css
@@ -142,15 +142,10 @@
 
 /* For kid image */
 .kids_image{
-    width:470px;
-    height: 575px;
+    width:100%;
+  
 
 }
-
-
-
-
-
 
 
 /*for nav media quary */
@@ -180,6 +175,33 @@
         padding-right:16px;
         justify-content: space-between;
         border:1px solid rgba(254, 163, 1, 1);
+    }
+
+    .container{
+        display: flex;
+        width:337px;
+        flex-direction: column-reverse;
+        margin:0 auto;
+        margin-top:260px;          
+    }
+    .introduction{
+        width:335px ;
+        margin-top:18px;      
+    }
+    #p1{
+       font-size: 2rem;
+       font-weight: bold; 
+       text-align: center;
+       margin-bottom:18px;      
+    }
+    #p2{
+        font-size:0.875rem ;
+        font-weight:400; 
+        text-align: center;
+        margin-bottom:18px;
+    }
+    .btn-2{
+        margin-left:65px ;
     }
 }
 
