--- a/style/style.css
+++ b/style/style.css
@@ -146,6 +146,187 @@
   
 
 }
+/*********************************************************************************/
+
+.Standard1{
+    font-size:2.875rem ;
+    font-weight: bold;
+   text-align: center;
+
+   
+}
+.cart{
+    display: flex;
+    gap:28px;
+    width: 1160px;
+   margin: 0 auto;
+   margin-top: 80px;
+   margin-bottom: 80px;
+    
+}
+.box1{
+   
+    width: 367px;
+    height: 476px;
+    box-shadow: 0px 0px 1px 0.94px;
+    background-color: rgba(222, 245, 255, 0.5);
+    border-radius: 19px;
+    
+}
+
+.box1_1{
+
+    margin-top: 52px;
+    margin-left: 105px;
+    margin-right: 115px;
+   
+}
+
+.box1_2{
+font-size: 1.6rem;
+font-weight: bold;
+margin-top: 32px;
+text-align: center;  
+}
+
+.box1_3{
+    font-size: 1rem;
+    font-weight:400;
+    margin-top: 32px;
+    text-align: center;
+    padding:5px;  
+
+   
+}
+.box1_4{
+    font-size: 1rem;
+    font-weight: bold;
+    color: rgba(100, 200, 255, 1);  
+    margin-top: 34px;
+    text-align: center;
+}
+
+
+/* for box 2_1*/
+.box2{
+   
+    width: 367px;
+    height: 476px;
+    box-shadow: 0px 0px 1px 0.94px;
+    background-color: rgba(255, 244, 220, 1);
+    border-radius: 19px;
+    
+}
+
+.box2_1{
+
+    margin-top: 52px;
+    margin-left: 105px;
+    margin-right: 115px;
+   
+}
+
+.box2_2{
+font-size: 1.6rem;
+font-weight: bold;
+margin-top: 32px;
+text-align: center;  
+}
+
+.box2_3{
+    font-size: 1rem;
+    font-weight:400;
+    margin-top: 32px;
+    text-align: center;
+    padding:5px;  
+
+   
+}
+.box2_4{
+    font-size: 1rem;
+    font-weight: bold;
+    color: rgba(240, 170, 0, 1);  
+    margin-top: 34px;
+    text-align: center;
+}
+/* for box 3*/
+.box3{
+   
+    width: 367px;
+    height: 476px;
+    box-shadow: 0px 0px 1px 0.94px;
+    background-color:rgba(242, 232, 255, 1);
+    border-radius: 19px;
+    
+}
+
+.box3_1{
+
+    margin-top: 52px;
+    margin-left: 105px;
+    margin-right: 115px;
+   
+}
+
+.box3_2{
+font-size: 1.6rem;
+font-weight: bold;
+margin-top: 32px;
+text-align: center;  
+}
+
+.box3_3{
+    font-size: 1rem;
+    font-weight:400;
+    margin-top: 32px;
+    text-align: center;
+    padding:5px;  
+
+   
+}
+.box3_4{
+    font-size: 1rem;
+    font-weight: bold;
+    color: rgba(135, 0, 255, 1);  
+    margin-top: 34px;
+    text-align: center;
+}
+.circle{
+    display: flex;
+    gap:10px;
+   justify-content: center;
+   margin-bottom: 60px;
+    
+} 
+.circle1{
+    width: 60px;
+    height: 60px;
+    background-color:rgba(254, 163, 1, 1);
+    text-align: center;
+    border-radius: 50%;
+    
+}
+#x{
+    margin-top: 14px;
+    color:white;
+}
+
+/* section 2 */
+
+.section2{
+    background-color:#FEA301 ;
+    width:100%;
+    height: 850px;
+}
+.cart1{
+    width: 540px;
+    height: 630px;
+    background-color: white;
+    border-radius: 16px;
+}
+#im1{
+    border-radius: 16px;
+}
 
 
 /*for nav media quary */
@@ -202,6 +383,21 @@
     }
     .btn-2{
         margin-left:65px ;
+    }
+
+    .cart{
+        flex-direction: column;
+        width:365px;
+        margin-top: 30px;
+    
+    }
+    .Standard1{
+        margin-top:-70px;
+        font-size:1.625rem ;
+        font-weight: bold;
+    }
+    .circle{
+        display: none;
     }
 }
 
