--- a/style/style.css
+++ b/style/style.css
@@ -314,20 +314,103 @@ text-align: center;
 /* section 2 */
 
 .section2{
-    background-color:#FEA301 ;
+    background-color:#efe6d6 ;
     width:100%;
-    height: 850px;
+    height: 900px;
+   
 }
 .cart1{
     width: 540px;
     height: 630px;
     background-color: white;
     border-radius: 16px;
+    display: flex;
+    gap:20px;
+    margin-left: 180px;
+    margin-right: 141px;
+
+   
 }
+.cart1_2{
+    display: flex;
+    gap:20px;
+}
+
 #im1{
     border-radius: 16px;
 }
+.btn-3{
+    border-radius:48px;
+    width: 175px;
+    height: 48px;
+    border: none;
+    color: white;
+    background-color: rgba(60, 216, 232, 1);
+    font-size: 1rem;
+    font-weight: 400;
+    margin-left: 25px;
+    margin-top:-50px;
+ 
+}
 
+.intro1_1{
+    font-size: 1.5rem;
+    font-weight:bold;
+    margin-right:50px;
+    margin-left: 30px;
+}
+
+.intro1_2{
+    font-size: 1rem;
+    font-weight:400;
+    margin-top: 50px;
+    margin-right:50px;
+    margin-left: 30px;
+}
+
+#im2{
+    border-radius:20px 20px 0px 0px;
+}
+.cart1_3, .cart1_4 , .cart1_5 , .cart1_6{
+    background-color: white;
+    border-radius:20px 20px 20px 20px;
+    width: 290px;
+    height: 300px;
+    
+}
+.cart1_4, .cart1_6{
+    margin-top: 25px;
+}
+.btn-4{
+    border-radius:48px;
+    width: 175px;
+    height: 38px;
+    border: none;
+    color: white;
+    background-color: rgba(149, 178, 38, 1);
+    font-size: 1rem;
+    font-weight: 400;
+    margin-left: 25px;
+    margin-top:-50px;
+}
+.intro1-3{
+    font-size: 1rem;
+    font-weight:bold;
+    text-align: center;
+    padding:15px;
+}
+.btn-5{
+    background-color: black;
+    color: white;
+    width: 200px;
+    height: 50px;
+    border-radius: 12px;
+    margin-top: 40px;
+    margin-bottom: 60px;
+    margin-left: 621px;
+  
+   
+}
 
 /*for nav media quary */
 
@@ -396,6 +479,7 @@ text-align: center;
         font-size:1.625rem ;
         font-weight: bold;
     }
+   
     .circle{
         display: none;
     }
