--- a/style/style.css
+++ b/style/style.css
@@ -314,7 +314,7 @@ text-align: center;
 /* section 2 */
 
 .section2{
-    background-color:#efe6d6 ;
+    background-color:#f3e4cb ;
     width:100%;
     height: 900px;
    
@@ -326,8 +326,8 @@ text-align: center;
     border-radius: 16px;
     display: flex;
     gap:20px;
-    margin-left: 180px;
-    margin-right: 141px;
+    margin-left: 250px;
+    
 
    
 }
@@ -407,7 +407,7 @@ text-align: center;
     border-radius: 12px;
     margin-top: 40px;
     margin-bottom: 60px;
-    margin-left: 621px;
+    margin-left: 750px;
   
    
 }
@@ -480,8 +480,54 @@ text-align: center;
         font-weight: bold;
     }
    
-    .circle{
+    .circle,.cart1_1{
         display: none;
     }
+    
+    .cart1_2{
+         flex-direction: column;
+         flex-wrap: wrap; 
+        padding-left: 0px;
+        gap:15px;
+         margin-left: 90px; 
+        margin-top: 25px;        
+       
+    }
+    #im2{
+        width:180px ;
+    }
+
+    .btn-4{
+        width:104px ;
+        height: 22px;
+        font-size: 0.6rem;
+        
+    }
+    .intro1-3{
+        font-size: 0.6rem;
+        font-weight: bold; 
+    }
+   
+    .cart1_3, .cart1_4 , .cart1_5 , .cart1_6{
+        width:180px ;
+        height: 180px;
+        background-color: blanchedalmond;
+        
+    }
+  
+    .cart1{
+        margin:0 auto;
+    }
+
+    .btn-5 {
+        
+        margin-top:0px; 
+        margin-bottom: 60px;
+        margin-left: 190px; 
+   }
+   .btn{
+    margin-top: -150px;
+   }
+   
 }
 
