--- a/style/style.css
+++ b/style/style.css
@@ -412,6 +412,10 @@ text-align: center;
    
 }
 
+#vission{
+   display:none;
+}
+
 /*for nav media quary */
 
 @media screen and (max-width:576px) {
@@ -521,12 +525,20 @@ text-align: center;
 
     .btn-5 {
         
-        margin-top:0px; 
-        margin-bottom: 60px;
+        margin-top:200px; 
+        margin-bottom: 50px;
         margin-left: 190px; 
    }
    .btn{
     margin-top: -150px;
+   }
+
+   .section2{
+    background-color: white;
+   }
+
+   #vission{
+    display: block;
    }
    
 }
