--- a/style/style.css
+++ b/style/style.css
@@ -576,7 +576,7 @@ text-align: center;
          flex-wrap: wrap; 
         padding-left: 0px;
         gap:15px;
-         margin-left: 90px; 
+         margin-left:50px; 
         margin-top: 25px;        
        
     }
@@ -673,6 +673,9 @@ text-align: center;
 }
 .section4{
     margin-top:3px;
+}
+#footer_intro{
+    width:350px ;
 }
 
 }
